--- a/Demo.dproj
+++ b/Demo.dproj
@@ -101,7 +101,7 @@
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
         <DCCReference Include="DemoForms\Form.Demo.pas">
-            <Form>FormDemo</Form>
+            <Form>formDemo</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <BuildConfiguration Include="Release">
