Improve & new controls

--- a/UCLPackage.dproj
+++ b/UCLPackage.dproj
@@ -170,6 +170,7 @@
         <DCCReference Include="Components\UCL.TUSeparator.pas"/>
         <DCCReference Include="Components\UCL.TUEdit.pas"/>
         <DCCReference Include="Components\UCL.TUScrollBox.pas"/>
+        <DCCReference Include="Components\UCL.TUSlider.pas"/>
         <None Include="UCLPackage.todo"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
