--- a/UCLPackage.dproj
+++ b/UCLPackage.dproj
@@ -188,9 +188,10 @@
         <DCCReference Include="Components\UCL.TUSlider.pas"/>
         <DCCReference Include="Components\UCL.TUTooltip.pas"/>
         <DCCReference Include="Components\UCL.TUContextMenu.pas"/>
-        <DCCReference Include="Components\UCL.TUWPForm.pas"/>
         <DCCReference Include="Components\UCL.TUQuickButton.pas"/>
-        <None Include="UCLPackage.todo"/>
+        <DCCReference Include="Components\UCL.TUBorder.pas"/>
+        <DCCReference Include="UCL.IntAnimation.Collection.pas"/>
+        <DCCReference Include="UCL.IntAnimation.Helpers.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
