--- a/Demo.dproj
+++ b/Demo.dproj
@@ -103,6 +103,10 @@
         <DCCReference Include="DemoForms\Form.Demo.pas">
             <Form>formDemo</Form>
         </DCCReference>
+        <DCCReference Include="DemoForms\Form.LoginDialog.pas">
+            <Form>formLoginDialog</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
