--- a/UCLPackage.dproj
+++ b/UCLPackage.dproj
@@ -141,10 +141,10 @@
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_MinorVer>1</VerInfo_MinorVer>
         <VerInfo_Locale>1033</VerInfo_Locale>
-        <VerInfo_Keys>CompanyName=;FileDescription=$(MSBuildProjectName);FileVersion=1.1.1.35;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProgramID=com.embarcadero.$(MSBuildProjectName);ProductName=$(MSBuildProjectName);ProductVersion=1.1.0.0;Comments=</VerInfo_Keys>
+        <VerInfo_Keys>CompanyName=;FileDescription=$(MSBuildProjectName);FileVersion=1.1.1.37;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProgramID=com.embarcadero.$(MSBuildProjectName);ProductName=$(MSBuildProjectName);ProductVersion=1.1.0.0;Comments=</VerInfo_Keys>
         <VerInfo_Release>1</VerInfo_Release>
         <VerInfo_AutoIncVersion>true</VerInfo_AutoIncVersion>
-        <VerInfo_Build>35</VerInfo_Build>
+        <VerInfo_Build>37</VerInfo_Build>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
@@ -196,6 +196,71 @@
         <DCCReference Include="Sources\UCL.TUContextMenu.pas"/>
         <DCCReference Include="Sources\UCL.TUQuickButton.pas"/>
         <DCCReference Include="Sources\UCL.TUTitleBar.pas"/>
+        <DCCReference Include="Sources\UCL.TUShadow.pas"/>
+        <RcItem Include="Resources\TUText.bmp">
+            <ResourceType>BITMAP</ResourceType>
+            <ResourceId>TUText</ResourceId>
+        </RcItem>
+        <RcItem Include="Resources\TUButton.bmp">
+            <ResourceType>BITMAP</ResourceType>
+            <ResourceId>TUButton</ResourceId>
+        </RcItem>
+        <RcItem Include="Resources\TUCaptionBar.bmp">
+            <ResourceType>BITMAP</ResourceType>
+            <ResourceId>TUCaptionBar</ResourceId>
+        </RcItem>
+        <RcItem Include="Resources\TUCheckBox.bmp">
+            <ResourceType>BITMAP</ResourceType>
+            <ResourceId>TUCheckBox</ResourceId>
+        </RcItem>
+        <RcItem Include="Resources\TUEdit.bmp">
+            <ResourceType>BITMAP</ResourceType>
+            <ResourceId>TUEdit</ResourceId>
+        </RcItem>
+        <RcItem Include="Resources\TUHyperLink.bmp">
+            <ResourceType>BITMAP</ResourceType>
+            <ResourceId>TUHyperLink</ResourceId>
+        </RcItem>
+        <RcItem Include="Resources\TUPanel.bmp">
+            <ResourceType>BITMAP</ResourceType>
+            <ResourceId>TUPanel</ResourceId>
+        </RcItem>
+        <RcItem Include="Resources\TUQuickButton.bmp">
+            <ResourceType>BITMAP</ResourceType>
+            <ResourceId>TUQuickButton</ResourceId>
+        </RcItem>
+        <RcItem Include="Resources\TURadioButton.bmp">
+            <ResourceType>BITMAP</ResourceType>
+            <ResourceId>TURadioButton</ResourceId>
+        </RcItem>
+        <RcItem Include="Resources\TUSeparator.bmp">
+            <ResourceType>BITMAP</ResourceType>
+            <ResourceId>TUSeparator</ResourceId>
+        </RcItem>
+        <RcItem Include="Resources\TUSlider.bmp">
+            <ResourceType>BITMAP</ResourceType>
+            <ResourceId>TUSlider</ResourceId>
+        </RcItem>
+        <RcItem Include="Resources\TUThemeManager.bmp">
+            <ResourceType>BITMAP</ResourceType>
+            <ResourceId>TUThemeManager</ResourceId>
+        </RcItem>
+        <RcItem Include="Resources\TUTitleBar.bmp">
+            <ResourceType>BITMAP</ResourceType>
+            <ResourceId>TUTitleBar</ResourceId>
+        </RcItem>
+        <RcItem Include="Resources\TUItemButton.bmp">
+            <ResourceType>BITMAP</ResourceType>
+            <ResourceId>TUItemButton</ResourceId>
+        </RcItem>
+        <RcItem Include="Resources\TUProgressBar.bmp">
+            <ResourceType>BITMAP</ResourceType>
+            <ResourceId>TUProgressBar</ResourceId>
+        </RcItem>
+        <RcItem Include="Resources\TUShadow.bmp">
+            <ResourceType>BITMAP</ResourceType>
+            <ResourceId>TUShadow</ResourceId>
+        </RcItem>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
