Fix XE10 compilation issues.
Fixes XE10 compilation issues, removes drop shadow from main form.

--- a/UCLPackageResource.rc
+++ b/UCLPackageResource.rc
@@ -1,16 +1,16 @@
-TUText BITMAP "Resources\\TUText.bmp"
-TUButton BITMAP "Resources\\TUButton.bmp"
-TUCaptionBar BITMAP "Resources\\TUCaptionBar.bmp"
-TUCheckBox BITMAP "Resources\\TUCheckBox.bmp"
-TUEdit BITMAP "Resources\\TUEdit.bmp"
-TUHyperLink BITMAP "Resources\\TUHyperLink.bmp"
-TUPanel BITMAP "Resources\\TUPanel.bmp"
-TUQuickButton BITMAP "Resources\\TUQuickButton.bmp"
-TURadioButton BITMAP "Resources\\TURadioButton.bmp"
-TUSeparator BITMAP "Resources\\TUSeparator.bmp"
-TUSlider BITMAP "Resources\\TUSlider.bmp"
-TUThemeManager BITMAP "Resources\\TUThemeManager.bmp"
-TUTitleBar BITMAP "Resources\\TUTitleBar.bmp"
-TUItemButton BITMAP "Resources\\TUItemButton.bmp"
-TUProgressBar BITMAP "Resources\\TUProgressBar.bmp"
-TUShadow BITMAP "Resources\\TUShadow.bmp"
+TUText Bitmap "Resources\\TUText.bmp"
+TUButton Bitmap "Resources\\TUButton.bmp"
+TUCaptionBar Bitmap "Resources\\TUCaptionBar.bmp"
+TUCheckBox Bitmap "Resources\\TUCheckBox.bmp"
+TUEdit Bitmap "Resources\\TUEdit.bmp"
+TUHyperLink Bitmap "Resources\\TUHyperLink.bmp"
+TUPanel Bitmap "Resources\\TUPanel.bmp"
+TUQuickButton Bitmap "Resources\\TUQuickButton.bmp"
+TURadioButton Bitmap "Resources\\TURadioButton.bmp"
+TUSeparator Bitmap "Resources\\TUSeparator.bmp"
+TUSlider Bitmap "Resources\\TUSlider.bmp"
+TUThemeManager Bitmap "Resources\\TUThemeManager.bmp"
+TUTitleBar Bitmap "Resources\\TUTitleBar.bmp"
+TUItemButton Bitmap "Resources\\TUItemButton.bmp"
+TUProgressBar Bitmap "Resources\\TUProgressBar.bmp"
+TUShadow Bitmap "Resources\\TUShadow.bmp"
